--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,11 +4,11 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
-        android:name="AdOpen"
+        android:name="com.mobile.photoeffect.free.AdOpen"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -17,19 +17,19 @@
         android:largeHeap="true"
         android:supportsRtl="true"
         android:theme="@style/Theme.PhotoStudio"
-        tools:targetApi="31">
+        tools:targetApi="33">
 
         <activity
-            android:name=".MainActivity"
+            android:name="com.mobile.photoeffect.free.MainActivity"
             android:screenOrientation="portrait"
             android:exported="false" />
 
         <activity
-            android:name=".FinalActivity"
+            android:name="com.mobile.photoeffect.free.FinalActivity"
             android:screenOrientation="portrait"
             android:exported="false" />
         <activity
-            android:name=".LoadingAdActivity"
+            android:name="com.mobile.photoeffect.free.LoadingAdActivity"
             android:screenOrientation="portrait"
             android:exported="true">
             <intent-filter>
